--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,25 @@
-# Next.js
-.next/
-out/
-build/
+# Dependencias
+node_modules
+.next
+out
+build
 
-# Production
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Firebase & App Hosting
+.firebase
+apphosting.yaml
 
-# Env
+# Variables de entorno
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Debug
-logs
-*.log
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Vercel
-.vercel
-
-# Firebase
-.firebase/
-apphosting-export.yaml
-
-# IDEs
-.vscode/
-.idea/
-*.swp
-*.swo
+# Sistema
 .DS_Store
+Thumbs.db
