--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,33 @@
-# Dependencias
-node_modules
-.next
-out
-build
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Firebase & App Hosting
-.firebase
-apphosting.yaml
+# testing
+/coverage
 
-# Variables de entorno
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# next.js
+/.next/
+/out/
 
-# Logs
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Sistema
-.DS_Store
-Thumbs.db
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
